added duration function in trip